[refactor] User Files.readString / writeString ; UTF-8 is default.
    pick f13fecfd17 [refactor] Code improvement: Use standard charset
    pick 549b53aa12 [refactor] User Files.readString / writeString ; UTF-8 is default.
    pick 8d46040631 [refactor] Remove semi-colons
    pick 3d95b7de2c [refactor] Remove unneeded toString conversions